<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiPOS</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="text_holder">Text Holder</string>
    <string name="continueV">Continuar</string>
    <string name="email">Correo Electrónico</string>
    <string name="venta">Venta Colones</string>
    <string name="ajusteP">Ajuste de Propina</string>
    <string name="terminal_activate">Activar Terminal</string>
    <string name="label_ta">Active su nuevo terminal de pagos</string>
    <string name="code_terminal">Codigo de Terminal</string>
    <string name="code_activation">Codigo de Activacion</string>
    <string name="activate">Activar Terminal</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember_user">Recordar Usuario</string>
    <string name="login">Ingresar</string>
    <string name="remember_password">¿Olvidó su Contraseña?</string>
    <string name="label_password">Ingrese su correo electrónico y le enviaremos las indicacions para reestablecer su contraseña.</string>
    <string name="send">Enviar</string>
    <string name="exampleV">0.00</string>
    <string name="device">Conecte el Dispositivo</string>
    <string name="slide_card">Deslice la Tarjeta</string>
    <string name="label_slide">Deslice la tarjeta de izquierda a drecha por el dispositivo, siempre con la banda magnética hacia abajo tal y como se muestra en la siguiente imagen:</string>
    <string name="anulacion">Anulacion</string>
    <string name="confirmar_compra">Confirmar Compra</string>
    <string name="tarjeta">Tarjeta:</string>
    <string name="name">Nombre</string>
    <string name="sub_total">SubTotal</string>
    <string name="taxation">Impuestos</string>
    <string name="tip">Propina</string>
    <string name="total">Monto Total</string>
    <string name="simbolo_dolares">USD</string>
    <string name="example_tip">0</string>
    <string name="vacio"/>
    <string name="tip1">6%</string>
    <string name="tip2">11%</string>
    <string name="tip3">20%</string>
    <string name="make_sale">Realizar Venta</string>
    <string name="voucher">Recibo</string>
    <string name="label_voucher">Gracias por su compra, adjunto encontrará el detalle de la transacción</string>
    <string name="todo">TODO</string>
    <string name="example">bbb</string>
    <string name="commerce">Comercio</string>
    <string name="id_terminal">Terminal ID</string>
    <string name="reference">Referencia</string>
    <string name="authorization">Autorizacion</string>
    <string name="bill">Factura</string>
    <string name="sale">Venta</string>
    <string name="date">Fecha</string>
    <string name="send_voucher">Enviar comprobante</string>
    <string name="send_voucher1">Enviar Recibo por Correo Electrónico</string>
    <string name="label_send_voucher">La copia del voucher se le enviará electronicamente a la dirección que indique a conutinuación</string>
    <string name="print">Imprimir</string>
    <string name="simbolo_colones">CRI</string>
    <string name="dialog_confirm_annulation">Confirmar Anulación</string>
    <string name="dialog_message">¿Está seguro que desea anular la transacion? Esta acción no se puede revertir.</string>
    <string name="yes">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="account_configuration">ADMINISTRACION DE CUENTA</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_pin">Cambiar PIN</string>
    <string name="label_change_password">Cambie su contraseña de ingreso a la plataforma. La contraseña debe contener al menos 8 caracteres con mayúsculas, minúsculas y números</string>
    <string name="confirm_password">Confirmar nueva contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="actual_password">Contraseña actual</string>
    <string name="change">Cambiar</string>
    <string name="change_passcode">Cambiar PIN</string>
    <string name="actual_passcode">PIN actual</string>
    <string name="new_passcode">PIN nuevo</string>
    <string name="label_change_passcode">Cambie el PIN (Personal Identification Number) asociado a su cuenta para realizar operaciones de confirmación, como anualciones y devoluciones</string>
    

</resources>
