<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/gray_background"
    style="@style/generalnotitle">
    
    <ImageView  
        android:id="@+id/imageTerminalAc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activate_terminal_header"/>

    <TextView
        android:id="@+id/terminalAC"
        style="@style/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/terminal_activate"
        android:textSize="@dimen/text_size_big" />

    <TextView
        android:id="@+id/terminalAC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/label_ta"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/idTerminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/code_terminal"
        android:textColor="#121563" 
        android:layout_gravity="center">
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/idActivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/code_activation"
        android:textColor="#121563" 
        android:layout_gravity="center">
    </EditText>
    
    <Button 
        android:id="@+id/continueV"
        android:background="@drawable/gray_button_background"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/activate"
        android:layout_gravity="center"
        />

</LinearLayout>
