<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray_background" >
    
    <TextView
        android:id="@+id/terminalAC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/remember_password"
        android:textSize="@dimen/text_size_big" 
        android:textColor="#030A6E"
       style="@style/TitleView"/>
    
     <TextView
        android:id="@+id/label1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/label_password"
        android:textSize="@dimen/text_size_small" 
        android:textColor="#111111"
       style="@style/TitleView"/>
    
     <EditText
        android:id="@+id/idTerminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="#121563" 
        android:layout_gravity="center"
        android:layout_marginTop="50dp">
        <requestFocus />
    </EditText>
    
     <Button 
        android:id="@+id/sendPass"
        android:background="@drawable/gray_button_background"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/send"
        android:layout_gravity="center"
        />

</LinearLayout>
