<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/change_password"
        style="@style/TitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="#030A6E"
        android:textSize="@dimen/text_size_big" />

    <TextView
        android:id="@+id/label1"
        style="@style/TitleView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/change_password"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/label_change_password"
        android:textColor="#111111"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/actual_password"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#121563" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/new_password"
        android:layout_alignRight="@+id/new_password"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="15dp"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#121563"
        android:textSize="13sp" >
        
    </EditText>

    <EditText
        android:id="@+id/actual_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/label1"
        android:layout_below="@+id/label1"
        android:layout_marginTop="40dp"
        android:background="@drawable/rect_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/actual_password"
        android:inputType="textPassword"
        android:textColor="#121563" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/change"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirm_password"
        android:layout_below="@+id/confirm_password"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/gray_button_background"
        android:gravity="center"
        android:onClick="change"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>